<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.register.RegisterActivity">
    <TextView
        android:id="@+id/tv_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_new_account"
        android:layout_marginBottom="64dp"
        android:textStyle="bold"
        android:textColor="#199A8E"
        android:textSize="24sp"
        style="@style/MaterialAlertDialog.Material3.Title.Text"
        android:textAlignment="center"
        android:paddingTop="16dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#199A8E"/>
    <EditText
        android:id="@+id/ti_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:drawableStart="@drawable/ic_username"
        android:drawablePadding="8dp"
        android:drawableTint="#199A8E"
        android:hint="@string/username"/>
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/ti_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="8dp"
        android:drawableTint="#199A8E"
        android:hint="@string/email"/>
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/ti_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="8dp"
        android:drawableTint="#199A8E"
        android:hint="@string/password"/>
    <RadioGroup
        android:id="@+id/rg_role"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="#199A8E"
            android:text="@string/role" />
        <RadioButton
            android:id="@+id/rb_hospital"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hospital"/>
        <RadioButton
            android:id="@+id/rb_patient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/patient"/>
    </RadioGroup>
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/ti_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:drawableStart="@drawable/ic_address"
        android:drawablePadding="8dp"
        android:drawableTint="#199A8E"
        android:hint="@string/address"/>
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/ti_nik"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:drawableStart="@drawable/ic_nik"
        android:drawablePadding="8dp"
        android:drawableTint="#199A8E"
        android:hint="@string/nik"/>
    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:backgroundTint="#199A8E"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/sudah_punya_akun"
            android:paddingEnd="8dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/login"
            android:textColor="#199A8E"/>
    </LinearLayout>
</LinearLayout>