<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp">
        <TextView
            android:id="@+id/detail_riwayat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_riwayat"
            android:textSize="24sp"
            style="@style/MaterialAlertDialog.Material3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            style="@style/MaterialAlertDialog.Material3"
            app:layout_constraintTop_toBottomOf="@id/detail_riwayat"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/keluhan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/keluhan"
            android:paddingTop="16dp"
            android:textSize="18sp"
            style="@style/MaterialAlertDialog.Material3.Title.Icon"
            app:layout_constraintTop_toBottomOf="@id/tv_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_keluhan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp"
            android:elevation="16dp"
            app:layout_constraintTop_toBottomOf="@id/keluhan"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <TextView
                android:id="@+id/tv_keluhan"
                android:padding="16dp"
                android:background="@drawable/custom_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lorem"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/diagonosis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hasil_diagnosis"
            android:paddingTop="16dp"
            android:textSize="18sp"
            style="@style/MaterialAlertDialog.Material3.Title.Icon"
            app:layout_constraintTop_toBottomOf="@id/cv_keluhan"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_diagnosis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp"
            android:elevation="16dp"
            app:layout_constraintTop_toBottomOf="@id/diagonosis"
            app:layout_constraintStart_toStartOf="parent">
            <TextView
                android:id="@+id/tv_diagnosis"
                android:padding="16dp"
                android:background="@drawable/custom_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lorem"/>
        </androidx.cardview.widget.CardView>

        <TextView
        android:id="@+id/saran"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saran"
        android:paddingTop="16dp"
        android:textSize="18sp"
        style="@style/MaterialAlertDialog.Material3.Title.Icon"
        app:layout_constraintTop_toBottomOf="@id/cv_diagnosis"
        app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_saran"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp"
            android:elevation="16dp"
            app:layout_constraintTop_toBottomOf="@id/saran"
            app:layout_constraintStart_toStartOf="parent">
            <TextView
                android:id="@+id/tv_saran"
                android:padding="16dp"
                android:background="@drawable/custom_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lorem"/>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>